fix：windows下出现“无法找到浏览器可执行文件路径，请手动配置。”
支持手动配置浏览器文件地址

--- a/.env
+++ b/.env
@@ -32,3 +32,5 @@ API_DEBUG=True
 API_WORKERS=1
 # 是否启用UI
 ENABLE_UI=True
+
+#BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
