fix：修复windows环境自定义安装cursor客户端导致无法使用token的问题
可以在.env中配置参数CURSOR_PATH的路径

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # 浏览器是否无头模式，为True时为无头模式（无界面），为False时为有头模式（有界面）
 BROWSER_HEADLESS=True
 # 浏览器用户代理
-BROWSER_USER_AGENT="Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36"
+BROWSER_USER_AGENT="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36 Edg/131.0.0.0"
 # 浏览器代理
 BROWSER_PROXY=
 
@@ -33,4 +33,9 @@ API_WORKERS=1
 # 是否启用UI
 ENABLE_UI=True
 
+# Windows 浏览器路径
 #BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
+
+# Cursor main.js 主文件路径
+# windows用户部分安装时是自定义目录安装的，需要修改该配置
+#CURSOR_PATH="D:\devtools\cursor"
