add：增加配置”是否使用动态ua池“

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,17 @@ BROWSER_HEADLESS=True
 BROWSER_USER_AGENT="Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36"
 # 浏览器代理
 BROWSER_PROXY=
+# 是否使用动态ua池
+DYNAMIC_USERAGENT=False
+# Windows 浏览器路径
+#BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
+
 
 # 多个域名使用逗号分隔
-EMAIL_DOMAINS=xxx.xxx
+EMAIL_DOMAINS=xxx.xx
 
 # 临时邮箱用户名
-EMAIL_USERNAME=xxxx
+EMAIL_USERNAME=xxx
 # 临时邮箱PIN码（如果需要）
 EMAIL_PIN=
 
@@ -32,9 +37,6 @@ API_DEBUG=True
 API_WORKERS=1
 # 是否启用UI
 ENABLE_UI=True
-
-# Windows 浏览器路径
-#BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
 
 # Cursor main.js 主文件路径
 # windows用户部分安装时是自定义目录安装的，需要修改该配置
