--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,20 @@
 BROWSER_HEADLESS=True
 # 浏览器用户代理
 BROWSER_USER_AGENT="Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/134.0.0.0 Safari/537.36"
-# 浏览器代理
-BROWSER_PROXY=
 # 是否使用动态ua池
 DYNAMIC_USERAGENT=False
 # Windows 浏览器路径
 #BROWSER_PATH="C:\Users\Administrator\AppData\Local\Google\Chrome\Bin\chrome.exe"
-
+# 是否启用浏览器代理
+USE_PROXY=False
+# 代理类型
+PROXY_TYPE=http
+# 代理ip
+PROXY_HOST=127.0.0.1
+# 代理端口号
+PROXY_PORT=7897
+# 代理超时时间
+PROXY_TIMEOUT=10
 
 # 多个域名使用逗号分隔
 EMAIL_DOMAINS=xxx.xx
