feat：新增开源无限邮箱类型zmail、动态配置选择邮箱类型

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ PROXY_PORT=7897
 # 代理超时时间
 PROXY_TIMEOUT=10
 
+
+# 临时邮箱类型 可选值：tempemail, zmail
+EMAIL_TYPE=tempemail
 # 多个域名使用逗号分隔
 EMAIL_DOMAINS=xxx.xx
 
@@ -24,6 +27,14 @@ EMAIL_DOMAINS=xxx.xx
 EMAIL_USERNAME=xxx
 # 临时邮箱PIN码（如果需要）
 EMAIL_PIN=
+
+# ===== ZMail配置 =====
+# ZMail API地址
+EMAIL_API=https://xxxxxxxxxxxxxxx
+# 是否启用邮箱API代理
+EMAIL_PROXY_ENABLED=True
+# 邮箱API代理地址
+EMAIL_PROXY_ADDRESS=http://ip:port
 
 # ===== 账号管理配置 =====
 # 系统最大已激活的账号数量，如果达到这个数量，则停止注册
