--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ PROXY_TIMEOUT=10
 EMAIL_TYPE=tempemail
 # 多个域名使用逗号分隔
 EMAIL_DOMAINS=xxx.xx
+# 临时邮箱域名后缀 看你选择的什么后缀
+EMAIL_DOMAIN=mailto.plus
 
 # 临时邮箱用户名
 EMAIL_USERNAME=xxx
